--- a/backend/.env
+++ b/backend/.env
@@ -1,30 +1,44 @@
-# MongoDB Connection String
-MONGO_URI=mongodb+srv://bhavani:balu90595@m0.sj2yuyk.mongodb.net/?retryWrites=true&w=majority&appName=M0
+# ============================================
+# IMPORTANT SECURITY NOTICE
+# ============================================
+# The previous credentials in this file were exposed and should be rotated.
+# Replace ALL values below with new, secure credentials.
+# NEVER commit this file to version control!
+# ============================================
 
-# JWT Secret
-JWT_SECRET=SuperSecretKey123!
+# MongoDB Connection String
+# Create a new password at: https://cloud.mongodb.com
+MONGO_URI=mongodb+srv://USERNAME:PASSWORD@cluster.mongodb.net/?retryWrites=true&w=majority&appName=M0
+
+# JWT Secret - MUST be at least 32 random characters
+# Generate one at: https://www.uuidgenerator.net/ or use: openssl rand -base64 32
+JWT_SECRET=REPLACE_WITH_STRONG_32_CHARACTER_SECRET
 
 # Gmail SMTP Configuration
 # Use App Password from Google Account (not your regular password)
 # Generate at: https://myaccount.google.com/apppasswords
-EMAIL_USER=mentorlink9@gmail.com
-EMAIL_PASS=mjauxjzkldyvymbn
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_gmail_app_password
 
 # Server Port
 PORT=5000
 
 # Cloudinary configuration
-CLOUDINARY_CLOUD_NAME=di5lljxb0
-# Replace these with your actual values from Cloudinary dashboard
-CLOUDINARY_API_KEY=381688862181935
-CLOUDINARY_API_SECRET=Z7zRLqrLFEc9cewaggBOTEc3vfA
+# Get these from: https://cloudinary.com/console
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+CLOUDINARY_URL=cloudinary://API_KEY:API_SECRET@CLOUD_NAME
 
-# Optional: full Cloudinary URL form (can be built from the three values above)
-# CLOUDINARY_URL=cloudinary://<api_key>:<api_secret>@<cloud_name>
-# The CLOUDINARY_URL must begin with cloudinary:// — example below uses the placeholder key/secret above
-CLOUDINARY_URL=cloudinary://381688862181935:Z7zRLqrLFEc9cewaggBOTEc3vfA@di5lljxb0
+# Mailtrap Configuration (Contact Form)
+# Get this from: https://mailtrap.io/
+MAILTRAP_TOKEN=your_mailtrap_token
+CONTACT_EMAIL=contact@yourdomain.com
 
-# Multer / upload settings (server can check these to decide storage)
-# Set USE_CLOUDINARY to true to upload to Cloudinary, false to use local storage
+# Upload settings
 USE_CLOUDINARY=true
 UPLOADS_FOLDER=uploads
+
+# Frontend URL (for CORS)
+FRONTEND_URL=http://localhost:5173
+CLIENT_URL=http://localhost:5173
